# trumptracker

./: .gitignore  README.md  inflation-metric-update-schedule.md  next-steps.md  promise.md  requirements.txt  trump-promises.md
backend/: .coverage  .coveragerc  __init__.py  app.py  database.py  fred_api.py  fred_data.db  pyproject.toml  setup.py
backend/api/: routes.py
backend/core/: config.py  exceptions.py  factory.py
backend/middleware/: security.py
backend/services/: __init__.py  config.py  data_analyzer.py  data_fetcher.py  decorators.py  exceptions.py  inflation_tracker.py  validators.py
backend/tests/: README.md  __init__.py  conftest.py  test_app.py  test_data_analyzer.py  test_data_fetcher.py  test_inflation_tracker.py
backend/trumptracker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: api-docs.md  backend-architecture.md  components.md  overview.md  project-structure.md  setup.md  tech-stack.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  InflationPromiseCard.jsx  PromiseCard.jsx  PromiseMenu.jsx  PromiseTracker.jsx
